practices/test_checker/P1/Face/exercise1/ERROR/16.c

/* Here, you must include the required libraries */
void main(){
	/* Here, you must write the source code */
	char n[80];
	int a;
	float w;
	
	printf("Please, entry your name: ");
	scanf("%s", &n);
	
	printf("Please, entry your age: ");
	scanf("%int", &a);
	
	printf("Please, entry your weight in kilograms: ");
	scanf("%f", &w);
	
	
	
	printf("\n\ \n\My name is %s and I am %i years old. My weight is %f kg.", n, a, w);
}
